# hello-cmake

./: CMakeLists.txt  README.md  compile_commands.json  hello-world  main.c
